# diagnostic_

./: README.md
backend/: .env.example  langgraph.json  pyproject.toml  requirements.txt  test_mcp.py
backend/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.3.pckl  .langgraph_ops.pckl
backend/app/: api.py  graph.py  graph_backup.py  state.py
backend/app/nodes/: diagnostic_agent.py  physician_review.py  report_agent.py  supervisor.py
backend/app/tools/: care_tools.py  mcp_client.py  mcp_client_backup.py  patient_tools.py
frontend/: streamlit_app.py
mcp_server/: server.py
