[project]
name = "diagnostic-medical-langgraph"
version = "0.1.0"
description = "Academic medical orientation multi-agent workflow with LangGraph and FastAPI"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "langgraph>=1.0.0",
  "langchain-core>=0.3.0",
  "pydantic>=2.0.0",
  "typing-extensions>=4.12.0",
  "mcp[cli]>=1.0.0"
]

[tool.setuptools]
packages = ["app"]
